# UNIAT

Clases/: Evaluacion_Prog_1.md  GitHub.md  Presentacion_curso.md
Clases/Programacion1/Material/: Entorno.md  Introducción.md  archivos.md
Clases/Programacion_CUDA/: CUDA.md  Intro.md  Kernel.md
Clases/Programacion_CUDA/CUDADeviceintro/: CMakeLists.txt  main.cu
Clases/Simulacion_fisicas2d/: Introduccion.md
Clases/Simulacion_fisicas2d/intro/: CMakeLists.txt  main.cpp  matematicas.md
Clases/Simulacion_fisicas2d/untitled/: CMakeLists.txt  test.cpp
DocumentacionLista/: SingleList
planes/: 101__Programación_Estructurada[1].docx  301 Desarrollo de software.docx  IPV503-Simuladores de Físicas en Tiempo Real (1).docx  IPV707-Programación de Proposito General por GPU.docx
